Fixes menu on mobile

--- a/_scss/layout/_navbar.scss
+++ b/_scss/layout/_navbar.scss
@@ -5,6 +5,7 @@
 
 
 // title bar text overrides
+.off-canvas .menu a,
 .title-bar .menu a {
   text-decoration: none;
   color: $white;
